--- a/public/index.html
+++ b/public/index.html
@@ -2,22 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - jQuery_小瑪莉模擬</title>
+  <title>I love sylphy</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 <!-- partial:index.partial.html -->
 <div class="slotWrap">
-  <div class="option no1 active"><span>彩金10元</span></div>
-  <div class="option no2"><span>彩金3180元</span></div>
-  <div class="option no3"><span>儲值<br>額外10%獎勵<br>(最高318)</span></div>
-  <div class="option no4"><span>彩金318元</span></div>
-  <div class="option no5"><span>彩金668元</span></div>
-  <div class="option no6"><span>彩金30元</span></div>
-  <div class="option no7"><span>IPhone X<br>太空灰 256G</span></div>
-  <div class="option no8"><span>彩金80元</span></div>
-  <div class="option no9"><span>ROLEX<br>Submariner 116610LV<br>綠陶瓷潛航者機械錶</span></div>
-  <div class="option no10"><span>彩金688元</span></div>
+  <div class="option no1 active"><span>1</span></div>
+  <div class="option no2"><span>2</span></div>
+  <div class="option no3"><span>3</span></div>
+  <div class="option no4"><span>4</span></div>
+  <div class="option no5"><span>5</span></div>
+  <div class="option no6"><span>6</span></div>
+  <div class="option no7"><span>7</span></div>
+  <div class="option no8"><span>8</span></div>
+  <div class="option no9"><span>9</span></div>
+  <div class="option no10"><span>10</span></div>
   <span class="clear"></span>
 </div>
 
